make file all added

--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,6 +1,7 @@
 # CROSS_COMPILE = aarch64-none-linux-gnu-
 CROSS_COMPILE = 
 
+all: writer
 
 writer : writer.o
 	$(CROSS_COMPILE)gcc writer.o -o writer
